static/css/stylesheet.css
/* --------------- Main Body CSS  ---------------*/

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    background-color: #ece8d7;
  }

  .nav-wrapper {
    background-color: #524c48;
  }

  .brand-logo {
    margin: 8px 0px 2px 20px;
  }

  .nav-extended {
    font-size: 18px;
    font-weight: 500;
    letter-spacing: 1px;
    font-family: 'Special Elite', serif;
  }

  main {
    flex: 1 0 auto;
  }

  /* ------------------------------------ Footer  ------------------------------------ */
     
  #footertext {
    padding-bottom: 15px;
    font-family: 'Libre Baskerville', serif;
  }

  footer.page-footer {
    background-color: #524c48;
  }

/* ------------------------------------ Welcome Messages ------------------------------------ */

  .welcomemessage {
    color: #fff;
    font-size: 1.45em;
    font-weight: 500;
    letter-spacing: 2px;
    font-family: 'Special Elite', serif;
  }

  .welcomecard {
    margin-top: 10px;
    border-radius: 10px;
    background-image: linear-gradient(to right, rgba(255,0,0,0), rgb(82,76,72));
  }

  #welcomecardheader {
    background-color: #524c48;
    color: #fff;
    font-family: 'Special Elite', serif;
  }

  .welcomepanel {
    margin-top: 20px;
    background-color: #524c48;
    background-image: url('/static/img/prateek-katyal-unsplash-books.jpg');
    background-size: cover;
    border-radius: 5px;
  }

  /* ------------------------------------ Login and Registration sections ------------------------------------ */

  #loginpanel {
    border-radius: 10px;
  }

  #registrationcard {
    background-color: #524c48;
    color: #fff;
    font-weight: 500;
    letter-spacing: 1px;
    font-family: 'Special Elite', serif;
    border-radius: 10px;
    margin-top: 10px;
    font-size: 1em;
  }

  h4#newtolibrary {
font-size: 1.5em;
font-weight: 600;
letter-spacing: 1px;
  }

  div.card-panel.login {
    border-radius: 20px;
  }

  div.card-panel.bookcontent {
    border-radius: 20px;
    background-color: #524c48;
  }

a.white-text {
  text-decoration: underline;
}

  .account {
    font-weight: 700;
    font-family: 'Libre Baskerville', serif;
    color:#fff;
  }

  .registrationline {
    margin-top: 50px;
    background-color: #524c48;
  }



/* ------------------------------------ Buttons ------------------------------------*/

  .btn-large {
    background-color: #524c48;
    color: #fff;
    border-radius: 10px;
    font-family: 'Special Elite', serif;
  }

div.submitbutton {
  margin-top: 10px;
  border-radius: 10px;
}

button.btn-large {
  border-radius: 10px;
}

/* ------------------------------------ Book Entry Cards ------------------------------------ */

.cardcontent {
  font-size: 0.75em;
  font-weight: 500;
  color: white;
  font-family: 'Libre Baskerville', serif;
  }

/* ------------------------------------ Collapsibles ------------------------------------ */

  div.collapsecontainer {
    border-radius: 10px;
  }

  div.collapsible,
  div.collapsible-body,
  div.collapsible-header,
  div.collapsible-container {
    border: none;
    box-shadow: none;
  }

  div.collapsible-header {
    background-color: #524c48;
  }

  div.collapsible-body {
    background-color: #dfcec2;
    border-radius: 5px;
  }

/* ------------------------------------ Forms ------------------------------------ */
  
div.formentry {
margin-bottom: -20px;
font-family: 'Libre Baskerville', serif;
}

#modalpencil {
  border-radius: 5px;
  background-color: #fff;
  color: #524c48;
}

/* ------------------------------------ Flash Messages ------------------------------------ */

.flashmessage {
  font-size: 24px;
  font-weight: 600;
  letter-spacing: 2px;
  color: #524c48;
  font-family: 'Libre Baskerville', serif;;
}

/* ------------------------------------- Book Deletion Modal ------------------------------------ */

.deletebook {
  font-family: 'Libre Baskerville', serif;
  border-radius: 5px;
  box-shadow: #524c48;
  color:#524c48;
}

#cancelbutton {
  padding-top: 3px;
  margin-right: 3px;
  background-color: #524c48;
    color: #fff;
    border-radius: 10px;
    font-family: 'Special Elite', serif;
}

#deletebutton {
  padding-top: 3px;
  background-color: #a70000;
    color: #fff;
    border-radius: 10px;
    font-family: 'Special Elite', serif;
}

/*------------------------------------ MEDIA QUERIES ------------------------------------ */

/*320x480 and 481x768:
Search bar and buttons need to be fixed on
Nav header needs fixing

481x768:
welcome message needs to be widened so that and login will fit the screen

320x480:
shrink welcome message and login so they fit the screen without scrolling too much

1024x768:
Search buttons need separating or making smaller
book entry cards need to stack rather than go next to, they're too squished

ALL OF THE REGISTRATION PAGE NEEDS TO BE FIXED

/* Index page - 320px x 480px /*
*/

@media only screen and (min-width: 320px) and (max-width: 480px)  {

a.brand-logo {
   left: 40%;
}

#welcomecardheader {
  padding: 0px;
}

div#welcomecardheader {
  font-size: 13px;
}

nav .brand-logo {
  position: relative;
  color: #fff;
  display: inline-block;
}
h5 {
  font-size: 1.3rem;
  line-height: 100%;
  margin: 1.0933333333rem 0 0.656rem -10rem;
}
}


@media only screen and (min-width: 480px) and (max-width: 768px)  {
h5 {
  font-size: 1.3rem;
  line-height: 100%;
  margin: 1.0933333333rem 0 0.656rem -10rem;
}
}

